force-app/main/default/objects/E_MOC_TA_Mandatory_Master__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category_Type__c</fullName>
        <label>Category Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mechanical</fullName>
                </value>
                <value>
                    <fullName>Instrument</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Civil</fullName>
                </value>
                <value>
                    <fullName>Catalyst &amp; Chemical</fullName>
                </value>
                <value>
                    <fullName>Design limit + Integrity Operating window (IOW)</fullName>
                </value>
                <value>
                    <fullName>Tank change service</fullName>
                </value>
                <value>
                    <fullName>Idled / Retired Assets (equipment)</fullName>
                </value>
                <value>
                    <fullName>Functional Override</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expert_field_for__c</fullName>
        <label>Expert field for</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indicator__c</fullName>
        <label>Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOC_Type__c</fullName>
        <label>MOC Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PISUsers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PISUsers</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>E-MOC TA Mandatory Master</relationshipLabel>
        <relationshipName>E_MOC_TA_Mandatory_Master</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlantSection__c</fullName>
        <label>PlantSection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_of_Main_Work_Center__c</fullName>
        <label>Plant of Main Work Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MROA</fullName>
                </value>
                <value>
                    <fullName>MROB</fullName>
                </value>
                <value>
                    <fullName>QMOS</fullName>
                </value>
                <value>
                    <fullName>QMEV</fullName>
                </value>
                <value>
                    <fullName>ENTS</fullName>
                </value>
                <value>
                    <fullName>ENRM</fullName>
                </value>
                <value>
                    <fullName>ENMM</fullName>
                </value>
                <value>
                    <fullName>ENIM</fullName>
                </value>
                <value>
                    <fullName>QMTS</fullName>
                </value>
                <value>
                    <fullName>ENEM</fullName>
                </value>
                <value>
                    <fullName>MMLD</fullName>
                </value>
                <value>
                    <fullName>TNPP</fullName>
                </value>
                <value>
                    <fullName>ENCM</fullName>
                </value>
                <value>
                    <fullName>TNPD</fullName>
                </value>
                <value>
                    <fullName>TNPE</fullName>
                </value>
                <value>
                    <fullName>MPOF</fullName>
                </value>
                <value>
                    <fullName>EOSC</fullName>
                </value>
                <value>
                    <fullName>MROC</fullName>
                </value>
                <value>
                    <fullName>MMLF</fullName>
                </value>
                <value>
                    <fullName>MPOE</fullName>
                </value>
                <value>
                    <fullName>TNPA</fullName>
                </value>
                <value>
                    <fullName>TNPB</fullName>
                </value>
                <value>
                    <fullName>TNPC</fullName>
                </value>
                <value>
                    <fullName>TNFX</fullName>
                </value>
                <value>
                    <fullName>TNFL</fullName>
                </value>
                <value>
                    <fullName>MFOP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require__c</fullName>
        <label>Require</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Require</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category_Type__c</fullName>
        <label>Sub-Category Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA_Level__c</fullName>
        <label>TA Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_MOC_TA_Mandatory_Master</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>E-MOC TA Mandatory Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Position__c</columns>
        <columns>Indicator__c</columns>
        <columns>Category_Type__c</columns>
        <columns>TA_Level__c</columns>
        <columns>Sub_Category_Type__c</columns>
        <columns>Expert_field_for__c</columns>
        <columns>Require__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Indicator__c</field>
            <operation>contains</operation>
            <value>kreetha</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TMN-{00000000}</displayFormat>
        <label>TA Mandatory No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>